[package]
name = "ointer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["topology", "geometry"]
repository = "https://github.com/emaibb/ointer/"
authors = ["Mingze Feng <mzfengibb@outlook.com>"]
description = "Using the first bit of pointer data to store an extra boolean value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
