[package]
name = "ointer"
version = "2.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["topology", "geometry"]
repository = "https://github.com/emaibb/ointer/"
authors = ["Mingze Feng <mzfengibb@outlook.com>"]
description = "Use the first bit of pointer data to store an extra boolean value"
