[package]
name = "ointer"
version = "3.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["topology", "geometry"]
repository = "https://github.com/emaibb/ointer/"
authors = ["Mingze Feng <mzfengibb@outlook.com>"]
description = "Steal the high bits of a pointer to store an extra value"

[dependencies]
paste = "1.0.14"
